# pico-scholar

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  docker-compose.yml  kg.html  llamaindex_rag.py  pmid.txt  pyproject.toml  requirements.txt  test_doc_chat.ipynb
assets/: .$Solution Design Diagram.drawio.bkp  .$Solution Design Diagram.drawio.dtmp  Solution Design Diagram.drawio
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.stage1  README.md  requirements.txt
backend/database/: schemas.sql
backend/datalake/mock_data/: abstracts.csv  abstracts2.csv
backend/datalake/pubmed/: PMC-ids-small.csv  pmcid_dict.pkl  recovered_pico_data.json
backend/datalake/synergy/: processed_Appenzeller-Herzog_2019_pubmed.csv  processed_Jeyaraman_2020_pubmed.csv  processed_Menon_2022_pubmed.csv
backend/lamatidb/abstract_pipelines/: tidb_rag.py
backend/lamatidb/interfaces/: index_interface.py  metadata_interface.py  mysql_interface.py  query_interface.py  run_streamlit.py  settings_manager.py  streamlit_app.py  (+1 more)
backend/serverfastapi/: app_init.py  crud.py  database.py  main-legacy.py  main.py  models.py  schemas.py
ben_scratchwork/: extract_pubmed_data.ipynb  llamaindex_rag.py  test_doc_chat.ipynb
front-end/lamatidb/: .gitigore  package-lock.json  package.json
frontend/: README.md
frontend/lamatidb/: Dockerfile  mysql-entrypoint.sh  nginx.conf  package-lock.json  package.json  unusedgitignore
lamatidb/: db_service.py  operational_service.py
lamatidb/abstract_pipelines/: tidb_rag.py
lamatidb/demos/: dspy_graphrag.py  haystack_first_rag_pipeline.py  haystack_starter.py  lamaindex_tidb.py  llamaindex_rag.py
lamatidb/interfaces/: index_interface.py  loader_interface.py  settings_manager.py  tidb_interface.py
lamatidb/pipelines/: orchestrator.py
server/: setup.py
server/swagger_server/: __main__.py
serverfastapi/: database.py  main.py  models.py  schemas.py
swagger-specs/: swagger.yaml
(+72 files in other folders)
