[tool.poetry]
name = "lamatidb"
version = "0.1.0"
description = ""
authors = ["datagero <datagero@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7"
python-dotenv = "^1.0.1"
sqlalchemy = "2.0.30"
llama-index = "^0.10.29"
llama-index-vector-stores-tidbvector = "0.1.2"
llama-index-embeddings-huggingface = "^0.2.2"
pymysql = "1.1.0"
tidb-vector = "0.0.9"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
fastapi-cors = "^0.0.6"

[tool.poetry.group.backend.dependencies]
fastapi = {extras = ["standard"], version = "^0.112.1"}
cryptography = "^43.0.0"
uvicorn = "^0.30.3"
streamlit = "^1.37.1"

[tool.poetry.group.ingest.dependencies]
wget = "^3.2"
openai = ">=1.40.0,<2.0.0"
adapters = "^1.0.0"
xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
